-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
3
-
14837
server build now breaks in Centos 7/el7. client-only build still works OK.
example errors:
CC [M] /home/bogl/lustre-release/lustre/mdd/mdd_dir.o
/home/bogl/lustre-release/lustre/mdd/mdd_dir.c: In function ‘mdd_migrate_create’:
/home/bogl/lustre-release/lustre/mdd/mdd_dir.c:3396:26: error: argument to ‘sizeof’ in ‘memset’ call is the same expression as the destination; did you mean to dereference it? [-Werror=sizeof-pointer-memaccess]
memset(mgr_ea, 0, sizeof(mgr_ea));
^
cc1: all warnings being treated as errors
make[6]: *** [/home/bogl/lustre-release/lustre/mdd/mdd_dir.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/mdd] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/home/bogl/rb/BUILD/kernel-3.10.0_123.4.2.l0708'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2
I believe this is due to the recent landing in master of commit de2d5808bd2987f76d2486272e1a9c192ba277d4; LU-5223 lmv: build master LMV EA dynamically build via readdir
It appears the gcc v4.8.2 in el7 is a bit pickier about some things than earlier gcc versions.