lustre/mdd/mdd_dir.c
@@ -3393,7 +3393,7 @@ static int mdd_migrate_create(const struct lu_env *env,
 	}
 
 	mgr_ea = (struct lmv_mds_md_v1 *)info->mti_xattr_buf;
-	memset(mgr_ea, 0, sizeof(mgr_ea));
+	memset(mgr_ea, 0, sizeof(*mgr_ea));
 	mgr_ea->lmv_magic = cpu_to_le32(LMV_MAGIC_V1);
 	mgr_ea->lmv_stripe_count = cpu_to_le32(2);
 	mgr_ea->lmv_master_mdt_index = mdd_seq_site(mdd)->ss_node_id;
